added some styling to the project and contact grid.

--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -66,3 +66,29 @@ hr {
   font-size: 5em;
   padding: 8px;
 }
+
+project-gird {
+  display: flex;
+  float: right;
+}
+
+.contact-body {
+  margin: auto;
+  background: grey;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  padding-top: 2em;
+}
+
+.contact-grid {
+  text-align: center;
+  justify-content: center;
+  width: 80%;
+  height: 550px;
+  background: white;
+  color: black;
+  border: 2px solid teal;
+  margin-bottom: 20px;
+}
