--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -74,7 +74,6 @@ project-gird {
 
 .contact-body {
   margin: auto;
-  background: grey;
   position: fixed;
   width: 100%;
   height: 100%;
@@ -89,6 +88,31 @@ project-gird {
   height: 550px;
   background: white;
   color: black;
-  border: 2px solid teal;
   margin-bottom: 20px;
+}
+
+.contact-grid h2  {
+  font-family: 'Bangers', sans-serif;
+}
+
+.contact-grid p { 
+  font-family: 'Oswald', sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.contact-grid hr {
+  border-top: 5px solid black;
+  width: 50%;
+  margin: auto;
+}
+
+.contact-list i {
+  font-size: 60px;
+  padding-right: 6rem;
+}
+
+.contact-list a {
+  color: black;
+  border-bottom: none;
 }
