--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -26,6 +26,7 @@ text-align: center;
   background-color: black;
   opacity: .6;
   width: 75%;
+  height: 30%;
   margin: auto;
   border-radius: 10px;
 }
@@ -33,16 +34,17 @@ text-align: center;
 .banner h1 {
   color: white;
   text-align: center;
-  font-family: 'MedievalSharp', "Bangers",-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif cursive;
+  font-family: 'Oswald', sans-serif;
+  padding-top: 50px;
+  font-size: 70px;
 }
 
-hr {
-  size: 20px;
-  height: 20%;
+.hr {
+  border-top: 2px solid whitesmoke;
 }
 
 .banner hr {
-  border-top: 14px whitesmoke;
+  border-top: 20px solid whitesmoke;
   width: 50%;
   margin: auto;
 }
